Mobile: minor spacing adjustments, 414-750px Intro text fixed

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -274,7 +274,7 @@ h5 {
 	}
 
 	h1 {
-		font-size: 18pt;
+		font-size: 16pt;
 	}
 	h2 {
 		font-size: 14pt;
