--- a/src/styles/components/AboutMe.scss
+++ b/src/styles/components/AboutMe.scss
@@ -1,77 +1,87 @@
 @import '../color.scss';
 
 .aboutMe {
-	margin: 5% 0;
+  margin: 5% 0;
 
-	.AboutMeInner {
-		display: flex;
-		justify-content: space-evenly;
-		background-color: $sectionBackdrop;
-		border-radius: 30px;
-		padding: 2%;
-		box-shadow: rgba(0, 0, 0, 0.25) 1px 1px 2px;
+  .AboutMeInner {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: $sectionBackdrop;
+    border-radius: 30px;
+    padding: 2%;
+    box-shadow: rgba(0, 0, 0, 0.25) 1px 1px 2px;
 
-		.selfDescription {
-			display: flex;
-			width: 35%;
-			flex-direction: column;
-			justify-content: space-evenly;
-			p {
-				justify-self: center;
-				text-align: center;
-			}
-		}
+    .selfDescription {
+      display: flex;
+      width: 35%;
+      flex-direction: column;
+      justify-content: space-evenly;
+      p {
+        justify-self: center;
+        text-align: center;
+      }
+    }
 
-		#image {
-			height: 70vh;
-			img {
-				height: 100%;
-				border-radius: 30px;
-				box-shadow: 2px 4px $sectionTitle;
-			}
-		}
-	}
+    #image {
+      height: 70vh;
+      img {
+        height: 100%;
+        border-radius: 30px;
+        box-shadow: 2px 4px $sectionTitle;
+      }
+    }
+  }
 }
 
 //*Tablet Styling
 @media (max-width: 850px) {
-	.aboutMe {
-		.AboutMeInner {
-			padding: 5% 2%;
+  .aboutMe {
+    .AboutMeInner {
+			flex-direction: column;
+      align-items: center;
+      padding: 5% 2%;
 
-			#image {
-				height: 60vh;
-				img {
-					box-shadow: 1.5px 3px $sectionTitle;
-				}
-			}
-		}
-	}
+			.selfDescription {
+        width: 100%;
+        margin: 15% 2% 4% 2%;
+        p {
+          margin: 2% 0;
+          padding: 2%;
+        }
+      }
+
+      #image {
+        height: 60vh;
+        img {
+          box-shadow: 1.5px 3px $sectionTitle;
+        }
+      }
+    }
+  }
 }
 
 //*Phone Styling
 @media (max-width: 414px) {
-	.aboutMe {
-		.AboutMeInner {
-			flex-direction: column;
-			align-items: center;
-			box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
+  .aboutMe {
+    .AboutMeInner {
+      flex-direction: column;
+      align-items: center;
+      box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
 
-			.selfDescription {
-				width: 100%;
-				margin: 8% 2% 4% 2%;
-				p {
-					margin: 2% 0;
-					padding: 2%;
-				}
-			}
+      .selfDescription {
+        width: 100%;
+        margin: 8% 2% 4% 2%;
+        p {
+          margin: 2% 0;
+          padding: 2%;
+        }
+      }
 
-			#image {
-				margin-bottom: 4%;
-				img {
-					box-shadow: 1px 2px $sectionTitle;
-				}
-			}
-		}
-	}
+      #image {
+        img {
+          box-shadow: 1px 2px $sectionTitle;
+        }
+      }
+    }
+  }
 }
