--- a/src/styles/components/Intro.scss
+++ b/src/styles/components/Intro.scss
@@ -100,6 +100,9 @@
 @media (max-width: 850px) {
   .introSection {
     .intro {
+      .introDescription {
+        padding: 8% 4%;
+      }
       .callToActionContainer {
         a {
           #button {
@@ -120,7 +123,7 @@
 @media (max-width: 414px) {
   .introSection {
     flex-direction: column;
-    margin: 30% 0 25% 0;
+    margin: 15% 0 25% 0;
 
     .intro {
       box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 2px;
@@ -133,7 +136,7 @@
       }
     }
     #introImg {
-      margin: 5% auto;
+      margin: 2% auto;
       img {
         width: 100%;
       }
